--- a/KsfServers.html
+++ b/KsfServers.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>KSF Servers</title>
-	<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🔰</text></svg>">
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🌊</text></svg>">
 	  <style>
         body { background-color: white; color: black; margin: 0; display: flex; height: 100vh; justify-content: center; align-items: center; }
 		a { color: blue; text-decoration: none; }
