--- a/KsfServers/index.html
+++ b/KsfServers/index.html
@@ -13,8 +13,8 @@
     <li><a href="steam://connect/74.91.123.51:27030">🔰 US East</a></li>
     <li><a href="steam://connect/74.91.115.159:27015">🔰 US Central</a></li>
     <li><a href="steam://connect/185.107.96.64:27019">🔰 Europe</a></li>
-    <li><a href="steam://connect/74.91.123.51:27031">💯🇹 United States</a></li>
-    <li><a href="steam://connect/185.107.96.64:27030">💯🇹 Europe</a></li>
+    <li><a href="steam://connect/74.91.123.51:27031">💯 United States</a></li>
+    <li><a href="steam://connect/185.107.96.64:27030">💯 Europe</a></li>
     <sub><sub>Closed Invitation</sub></sub>
     <li><a href="steam://connect/74.91.123.51:27016">Expert</a></li>
     <li><a href="steam://connect/74.91.123.51:27017">Veteran</a></li>
