--- a/KsfServers/index.html
+++ b/KsfServers/index.html
@@ -5,20 +5,20 @@
     <link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🌊</text></svg>">
     <link rel=stylesheet href="styles.css">
   </head>
-  <body>
+  <body><ul>
     KSF Servers<br/>
     <sub><sub>Open Invitation</sub></sub>
-    <a href="steam://connect/74.91.123.51:27015">🌐 Public</a>
-    <a href="steam://connect/185.107.96.64:27016">🌐 Europe</a>
-    <a href="steam://connect/139.99.149.210:27015">🌐 Australia</a>
-    <a href="steam://connect/74.91.123.51:27030">🔰 US East</a>
-    <a href="steam://connect/74.91.115.159:27015">🔰 US Central</a>
-    <a href="steam://connect/185.107.96.64:27019">🔰 Europe</a>
-    <a href="steam://connect/74.91.123.51:27031">💯 United States</a>
-    <a href="steam://connect/185.107.96.64:27030">💯 Europe</a>
+    <li><a href="steam://connect/74.91.123.51:27015">🌐 Public</a></li>
+    <li><a href="steam://connect/185.107.96.64:27016">🌐 Europe</a></li>
+    <li><a href="steam://connect/139.99.149.210:27015">🌐 Australia</a></li>
+    <li><a href="steam://connect/74.91.123.51:27030">🔰 US East</a></li>
+    <li><a href="steam://connect/74.91.115.159:27015">🔰 US Central</a></li>
+    <li><a href="steam://connect/185.107.96.64:27019">🔰 Europe</a></li>
+    <li><a href="steam://connect/74.91.123.51:27031">💯 United States</a></li>
+    <li><a href="steam://connect/185.107.96.64:27030">💯 Europe</a></li>
     <sub><sub>Closed Invitation</sub></sub>
-    <a href="steam://connect/74.91.123.51:27016">👑 Expert</a>
-    <a href="steam://connect/74.91.123.51:27017">👑 Veteran</a>
-    <a href="steam://connect/185.107.96.64:27018">👑 Top 500</a>
-  </body>
+    <li><a href="steam://connect/74.91.123.51:27016">👑 Expert</a></li>
+    <li><a href="steam://connect/74.91.123.51:27017">👑 Veteran</a></li>
+    <li><a href="steam://connect/185.107.96.64:27018">👑 Top 500</a></li>
+  </ul></body>
 </html>
