--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      height: 100%;
       margin: 0;
-      background-size: cover;
-      background-position: center;
+      height: 100vh;
+      background-size: 100vw 100vh;
+      background-position: center center;
       background-repeat: no-repeat;
       transition: background-image 1s ease-in-out;
     }
