--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -7,10 +7,10 @@
   <style>
     html, body {
       margin: 0;
-      height: 100vh;
-      background-size: 100vw 100vh;
+      height: 100%;
+      background-size: 100% 100%;
       background-position: center center;
-      background-repeat: no-repeat;
+      background-repeat: repeat-x;
       transition: background-image 1s ease-in-out;
     }
   </style>
