--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -4,16 +4,7 @@
   <meta charset="UTF-8">
   <title>Solar Gradient</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      background-size: 100% 100%;
-      background-position: center center;
-      background-repeat: repeat-x;
-      transition: background-image 1s ease-in-out;
-    }
-  </style>
+  <link rel=stylesheet href="styles.css">
 </head>
 <body>
   <script src="https://unpkg.com/suncalc/suncalc.js"></script>
