--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -7,6 +7,8 @@
   <link rel=stylesheet href="styles.css">
 </head>
 <body>
+  <div class="bg-layer"></div>
+  <div class="blur-overlay"></div>
   <script src="https://unpkg.com/suncalc/suncalc.js"></script>
   <script src="script.js"></script>
 </body>
