--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Solar Gradient</title>
+<head><title>Solar Gradient</title>
+  <link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🌅</text></svg>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel=stylesheet href="styles.css">
 </head>
