--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -6,7 +6,10 @@
   <link rel=stylesheet href="styles.css">
 </head>
 <body>
-  <div class="bg-layer"></div>
+  <div class="bg-container">
+    <div class="bg-layer back"></div>
+    <div class="bg-layer front"></div>
+  </div>
   <div class="blur-overlay"></div>
   <script src="https://unpkg.com/suncalc/suncalc.js"></script>
   <script src="script.js"></script>
