--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -12,6 +12,7 @@
   </div>
   <div class="blur-overlay"></div>
   <script src="https://unpkg.com/suncalc/suncalc.js"></script>
+  <script src="timezone-coords.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
