--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -12,8 +12,8 @@
   </div>
   <div class="blur-overlay"></div>
   <script src="https://unpkg.com/suncalc/suncalc.js"></script>
-  <script src="image-vectors.js"></script>
-  <script src="timezone-coords.js"></script>
+  <script src="constants/image-vectors.js"></script>
+  <script src="constants/timezone-coords.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
