--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -11,7 +11,7 @@
     <div class="bg-layer front"></div>
   </div>
   <div class="blur-overlay"></div>
-  <script src="https://unpkg.com/suncalc/suncalc.js"></script>
+  <script src="https://unpkg.com/suncalc@1.9.0/suncalc.js"></script>
   <script src="constants/image-vectors.js"></script>
   <script src="script.js"></script>
 </body>
