--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=en>
 <head><title>Solar Gradient</title>
   <link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🌅</text></svg>">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel=stylesheet href="styles.css">
+  <meta name=viewport content="width=device-width, initial-scale=1.0">
+  <link rel=stylesheet href=styles.css>
 </head>
 <body>
-  <div class="bg-container">
+  <div class=bg-container>
     <div class="bg-layer back"></div>
     <div class="bg-layer front"></div>
   </div>
-  <script src="suncalc-1.9.0.js"></script>
-  <script src="script.js"></script>
+  <script src=suncalc-1.9.0.js></script>
+  <script src=script.js></script>
 </body>
 </html>
