--- a/SolarGradient/index.html
+++ b/SolarGradient/index.html
@@ -10,7 +10,7 @@
     <div class="bg-layer back"></div>
     <div class="bg-layer front"></div>
   </div>
-  <div class="blur-overlay"></div>
+  <div class=blur-overlay></div>
   <script src=suncalc-1.9.0.js></script>
   <script src=script.js></script>
 </body>
