--- a/ViewportRenderer/index.html
+++ b/ViewportRenderer/index.html
@@ -3,8 +3,10 @@
 <head><title>Viewport Renderer</title>
   <link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>📼</text></svg>">
   <meta name=viewport content="width=device-width, initial-scale=1.0">
+  <link rel=stylesheet href=styles.css>
 </head>
 <body>
+  <canvas id=canvas></canvas>
   <script src=script.js></script>
 </body>
 </html>
