--- a/KsfServers/index.html
+++ b/KsfServers/index.html
@@ -3,7 +3,7 @@
   <head><title>KSF Servers</title>
     <meta name=description content="Index of KSF Surf Servers">
     <link rel=icon href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14'>🌊</text></svg>">
-    <link rel=stylesheet href="styles.css">
+    <link rel=stylesheet href=styles.css>
   </head>
   <body><ul>
     KSF Servers<br/>
